--- a/src/main/webapp/resources/main.css
+++ b/src/main/webapp/resources/main.css
@@ -1,24 +1,37 @@
 .note {
-    border: 2px solid black;
+    background-color: whitesmoke;
+    border: 1px solid black;
+    margin-top: 5px;
+    padding: 5px;
 }
 
-.note, header, footer {
+header, footer {
     margin-top: 5px;
     text-align: center;
 }
 
+h2, h3 {
+    margin: 0;
+}
+
 h2 {
+    border: 2px solid black;
+    box-sizing: border-box;
+    padding: 5px;
     text-align: center;
     width: 100%;
 }
 
-header a, footer a {
+button, header a, footer a, h2 {
     background-color: darkblue;
-    border: 2px solid black;
     color: white;
+    font-weight: bold;
+}
+
+header a, footer a {
+    border: 2px solid black;
     display: inline-block;
     font-size: 20px;
-    font-weight: bold;
     padding: 5px;
     text-decoration: none;
     width: 30%;
